# fez_model_generator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  all_texture_sample_closest.py
source/: Application.cpp  Application.h  main.cpp
source/geom/: Geometry.h
source/math/: Quaternion.h  Vector.h
source/model/: ArtObject.h  BackgroundPlane.h  Character.h  Geometry.h  Level.h  Texture.h  TrileEmplacement.h  Vertex.h
source/parser/: ArtObjectParser.cpp  ArtObjectParser.h  GeometryParser.cpp  GeometryParser.h  LevelParser.cpp  LevelParser.h  TextureParser.cpp  TextureParser.h  TrileSetParser.cpp  TrileSetParser.h
source/writer/: GeometryWriter.cpp  GeometryWriter.h  LevelWriter.cpp  LevelWriter.h  Writer.cpp  Writer.h
