CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

IF(NOT DEFINED ENV{Qt6_DIR})
    MESSAGE(FATAL, "Qt6_DIR not found")
ELSE()
    SET(CMAKE_PREFIX_PATH $ENV{Qt6_DIR})
ENDIF()

IF(NOT DEFINED ENV{RVDep})
    MESSAGE(FATAL, "Deps not found")
ELSE()
    SET(DepDir $ENV{RVDep})
ENDIF()

SET(PROJECT_GENERATED_INCLDUE_PATH ${CMAKE_CURRENT_BINARY_DIR}/generated)
SET(PROJECT_BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(PROJECT_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/source)

PROJECT(FezModelGenerator)

# Set C++ Standard
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core Widgets Xml)

QT_STANDARD_PROJECT_SETUP()

FILE(GLOB_RECURSE PROGRAMMFILES ${PROJECT_SRC_PATH}/*)

QT_ADD_EXECUTABLE(FezModelGenerator ${PROGRAMMFILES})

SOURCE_GROUP(TREE ${PROJECT_SRC_PATH} PREFIX source FILES ${PROGRAMMFILES})

TARGET_INCLUDE_DIRECTORIES(FezModelGenerator PUBLIC ${PROJECT_SRC_PATH})
TARGET_INCLUDE_DIRECTORIES(FezModelGenerator PUBLIC ${DepDir}/eigen/include/eigen3)
TARGET_INCLUDE_DIRECTORIES(FezModelGenerator PUBLIC ${DepDir}/assimp/include)

TARGET_LINK_LIBRARIES(FezModelGenerator PRIVATE debug     ${DepDir}/assimp/lib/assimp-vc141-mtd.lib)
TARGET_LINK_LIBRARIES(FezModelGenerator PRIVATE optimized ${DepDir}/assimp/lib/assimp-vc141-mt.lib)
TARGET_LINK_LIBRARIES(FezModelGenerator PRIVATE Qt6::Core Qt6::Widgets Qt6::Xml)

FILE(INSTALL ${DepDir}/assimp/bin/assimp-vc141-mtd.dll DESTINATION ${PROJECT_BIN_PATH}/debug)
FILE(INSTALL ${DepDir}/assimp/bin/assimp-vc141-mt.dll  DESTINATION ${PROJECT_BIN_PATH}/release)

IF(MSVC)
    SET_TARGET_PROPERTIES(FezModelGenerator  PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
    SET_TARGET_PROPERTIES(FezModelGenerator  PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
ENDIF(MSVC)

ADD_CUSTOM_COMMAND(
    TARGET FezModelGenerator
    POST_BUILD
    COMMAND CD $<$<CONFIG:Debug>:${PROJECT_BIN_PATH}/Debug>$<$<CONFIG:Release>:${PROJECT_BIN_PATH}/Release> && ${WINDEPLOYQT_EXECUTABLE} FezModelGenerator.exe --verbose 1 --dir . --plugindir plugins --no-translations --compiler-runtime
    )

QT_FINALIZE_PROJECT()
